# CountCardsSueca

./: CMakeLists.txt  README.md  getDataSet.py  main.cpp  projmain  sourceImagesDataset.txt  source_img_comp.txt
